# IC-Footprint-Main

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json
blackhole/: Cargo.toml
blackhole/src/: blackhole.rs  lib.rs
candid/: blackhole.did  cycles_assessment_manager.did  escrow_manager.did  esg_wallet.did  node_escrow.did  node_manager.did
cycles_assessment_manager/: Cargo.toml
cycles_assessment_manager/src/: cycles_assessment_manager.rs  lib.rs
escrow_manager/: Cargo.toml
escrow_manager/src/: escrow_manager.rs  lib.rs
esg_wallet/: Cargo.toml  README.md
esg_wallet/src/: cawa_poster.rs  esg_wallet.rs  lib.rs
node_escrow/: Cargo.toml  README.md
node_escrow/src/: cawa_poster.rs  lib.rs  node_escrow.rs
node_manager/: Cargo.toml
node_manager/src/: lib.rs  node_manager.rs
