[package]
name = "node_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.9.10"
ic-cdk = "0.11.0"
icrc-ledger-types = "0.1.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.108"
